Agregado wow.js en el home

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <!-- 1. Configure SystemJS -->
+  <script src="system.config.js"></script>
+  <!-- 2. Add WOW dependency-->
+  <script src="node_modules/wowjs/dist/wow.min.js"></script>
 
 </head>
 <body>
